--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "cli": "^1.0.1",
     "css-loader": "^6.10.0",
